# bb-myBudgetBook

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 2026-04-30-a1b2c3d4_initial_schema.py  2026-05-01-b2c3d4e5_add_role_and_status_to_users.py  2026-05-01-c3d4e5f6_add_billing_interval_to_subscriptions.py  2026-05-01-d4e5f6g7_rename_viewer_to_editor_in_userrole.py  2026-05-01-e5f6g7h8_add_app_settings.py  2026-05-01-f6g7h8i9_add_user_settings.py  2026-05-03-g7h8i9j0_v022_slice_a.py  2026-05-04-h8i9j0k1_add_updated_at_to_price_history.py  2026-05-04-i9j0k1l2_slice_f_scheduled_payments.py  2026-05-05-j0k1l2m3_v023_pause_history.py  2026-05-05-k1l2m3n4_v023_drop_columns_extend_enums.py  2026-05-05-l2m3n4o5_v023_nullable_scheduled_payment_amount.py  2026-05-06-m3n4o5p6_v024_billing_history.py  2026-05-08-n4o5p6q7_v025_scheduler_catch_up_days.py  (+2 more)
backend/app/: bootstrap.py  config.py  database.py  dependencies.py  exceptions.py  main.py  scheduler_control.py  security.py
backend/app/models/: base.py  (+8 more)
backend/tests/: test_savings_box_v026.py  test_settings_scheduler.py  test_smoke.py  test_subscriptions_v022.py  test_subscriptions_v023.py  test_subscriptions_v024.py
backend/tools/: generate_api_docs.py  generate_frontend_docs.py  generate_pattern_docs.py  generate_vibe_readme.py  hash_password.py  seed_testing_subscription.py
(+153 files in other folders)
